samples/_failures_safe/1761333068_0690f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf096411.c: In function ‘main’:
./samples/SAFE/__tmp_cf096411.c:176:16: error: expected ‘;’ at end of input
  176 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_cf096411.c:176:9: error: expected declaration or statement at end of input
  176 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_cf096411.c:176:9: error: expected declaration or statement at end of input
